[package]
name = "tinykv"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3"
